Fix <ul> styling on smaller screens

--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -81,8 +81,4 @@ main {
       margin-top: 0;
     }
   }
-
-  ul {
-    list-style-type: square;
-  }
 }
